# django-var-cms

./: .gitignore  HOW_TO_USE.md  LICENSE  README.md  export_docs.py  pyproject.toml
.github/workflows/: deploy-pages.yml  publish.yml
config/: settings.py  urls.py
demo/: apps.py  models.py  var_cms_admin.py
demo/management/commands/: seed_demo.py
demo/migrations/: 0001_initial.py
docs/: index.html  llms.txt  robots.txt  sitemap.xml
templates/cms_core/: base.html  delete.html  form.html  index.html  list.html
var_cms/: README.md  __init__.py  apps.py  permissions.py  registry.py  urls.py
var_cms/media_utils/: convert.py  crop.py
var_cms/templates/var_cms/: about.html  base.html  change_password.html  delete.html  detail.html  error.html  forgot_password.html  forgot_password_verify.html  form.html  index.html  list.html  login.html  otp_verify.html
var_cms/templatetags/: cms_tags.py  var_cms_tags.py
