[project]
name = "django-var-cms"
version = "1.1.2"
description = "A modern, role-based Django CMS registry with rich media previews"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


dependencies = [
    "django>=5.0",
    "pillow>=10.0",
    "whitenoise>=6.6",
]

[project.optional-dependencies]
tailwind = ["django-tailwind-cli>=2.0"]
geo = ["django[gis]>=5.0"]
pdf = ["pdf2image>=1.16"]
dev = ["django-debug-toolbar>=4.0"]

[tool.hatch.build.targets.sdist]
include = [
    "/var_cms",
]

[tool.hatch.build.targets.wheel]
packages = ["var_cms"]

[dependency-groups]
dev = ["django-debug-toolbar>=4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


